--- a/README
+++ b/README
@@ -8,5 +8,4 @@ In order to compile this you also need to include the Launcher Support project (
 
 * Disclaimer *
 
-Funky Android Ltd. offer no warranty over this code. We have modified the stock launcher and maintained the original copyright
-messages where they existed.
+Funky Android Ltd. offer no warranty over this code. We have modified the stock launcher and maintained the original copyright messages where they existed.
